--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
+beautifulsoup4==4.4.1
+bleach==1.4.2
+chardet==2.3.0
+Django==1.9.4
+django-contrib-comments==1.7.0
+filebrowser-safe==0.4.3
+future==0.15.2
+grappelli-safe==0.4.2
+html5lib==0.9999999
 Mezzanine==4.1.0
+mysqlclient==1.3.7
+oauthlib==1.0.3
+Pillow==3.1.1
+pytz==2016.3
+requests==2.9.1
+requests-oauthlib==0.6.1
+six==1.10.0
+tzlocal==1.2.2
