--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.4.1
 bleach==1.4.2
 chardet==2.3.0
 Django==1.9.4
+django-background-image==0.0.1
 django-contrib-comments==1.7.0
 filebrowser-safe==0.4.3
 future==0.15.2
